[package]
name = "mysql_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
members = ["mysql_diesel",]
[dependencies]
diesel = { version = "2.0.3", features = ["mysql"] }
dotenv = "0.15.0"
json = "0.12.4"
rocket = "0.5.0-rc.3"
rocket_contrib = "0.4.11"
serde = "1.0.160"
