[package]
name = "mysql_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# members = ["mysql_diesel",]
[dependencies]
chrono = { version = "0.4.24", features = ["serde"]}
diesel = { version = "2.0.3", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
json = "0.12.4"
rocket = "0.5.0-rc.3"
serde = "1.0.160"
serde_json = "1.0.96"

sha256 = "1.1.3"
